[package]
name = "txtpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "^4.4.0"
error-stack = "^0.3.1"
termcolor = "^1.2.0"
threadpool = "^1.8.1"
clap = { version = "^4.2.4", features = ["cargo", "derive"] }
log = "^0.4.17"
env_logger = "^0.10.0"

[[bin]]
name = "txtpp"
path = "src/main.rs"

[lib]
name = "txtpp"
path = "src/lib.rs"