[package]
name = "txtpp"
version = "0.1.5"
edition = "2021"
description = "A simple-to-use general purpose preprocessor for text files."
repository = "https://github.com/Pistonite/txtpp"
license = "GPL-3.0"
authors = ["Pistonight <terrabyte100k@gmail.com>"]
keywords = ["preprocessor", "tool", "template", "macro", "include"]
categories = ["development-tools::build-utils", "template-engine"]
exclude = [
    "tests/examples/**/*",
    "docs/*",
    ".github/**/*",
    "Justfile"
]

[dependencies]
which = "^4.4.0"
error-stack = "^0.3.1"
termcolor = "^1.2.0"
threadpool = "^1.8.1"
clap = { version = "^4.2.4", features = ["cargo", "derive"] }
log = "^0.4.17"
env_logger = "^0.10.0"
derivative = "^2.2.0"

[dev-dependencies]
copy_dir = "^0.1.2"
murmur3 = "^0.5.2"

[[bin]]
name = "txtpp"
path = "src/main.rs"

[lib]
name = "txtpp"
path = "src/lib.rs"
