[package]
name = "txtpp"
version = "0.2.4"
edition = "2021"
description = "A simple-to-use general purpose preprocessor for text files."
repository = "https://github.com/Pistonite/txtpp"
license = "GPL-3.0"
authors = ["Pistonight <pistonknight@outlook.com>"]
keywords = ["preprocessor", "tool", "template", "macro", "include"]
categories = ["development-tools::build-utils", "template-engine"]
exclude = [
    "tests/examples/**/*",
    "docs/*",
    ".github/**/*",
    "Taskfile.yml"
]

[dependencies]
which = "^5.0.0"
error-stack = "0.5.0"
termcolor = "1.4.1"
threadpool = "1.8.1"
clap = { version = "^4.4.7", features = ["cargo", "derive"], optional = true }
log = "0.4.22"
env_logger = "0.11.5"
derivative = "2.2.0"

[features]
default = ["cli"]
cli = ["clap"]

[dev-dependencies]
copy_dir = "^0.1.2"
murmur3 = "^0.5.2"

[[bin]]
name = "txtpp"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "txtpp"
path = "src/lib.rs"
